--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,10 @@ box-sizing: border-box;
 
 body
 {
-font-family: 'Open Sans', sans-serif;
-font-size: .9em;
-line-height: 1.2em;
+  font-family: 'Open Sans', sans-serif;
+  font-size: .9em;
+  line-height: 1.2em;
+  background-color: #333;
 }
 
 .trivia-container
