--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,9 @@ body
     font-family: 'Open Sans', sans-serif;
     font-size: .9em;
     line-height: 1.2em;
-
+    width: 100vw;
+    height: 100vh;
+    background: #666;
 }
 
 .trivia-container
