--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,8 @@ body
     border-radius: 6px;
     border: 1px solid #333;
     cursor: pointer;
+    font-size: 1.2em;
+    color: #333;
 }
 
 .btn-correct
