--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body
     line-height: 1.2em;
     width: 100vw;
     height: 100vh;
-    background: #999;
+    background-color: #999;
 }
 
 .trivia-container
